# UBB-University

./: README.md
Anul 1/.obsidian/: workspace.json
Anul 1/OperatingSystems/: Main.md  Study.md
Anul 1/SD/: LAB.md
Anul 1/SistemeDinamice/: Lab01.md
FP/Lab4-6/: main.py
FP/Lab7-9/: README.md  main.py  sortari.py
Grafuri/: info.txt
Grafuri/TEST_1/: OUT  main.cpp
Grafuri/lab01/: con.txt  in1.txt  input5.txt  main  main.c  mian.c  necon.txt  pb2  pb2.c
Grafuri/lab02/: BFS.cpp  DFS.cpp  Floyd-Warshall.cpp  Lee.cpp  Moore.cpp  PB1  PB2  PB3  PB4  PB5
Grafuri/lab05/: E  Edmonds-Karp.cpp  H  Hierholzer.cpp  P  PomparePreflux.cpp
Grafuri/test1/: BF  BF.cpp  BFS  BFS.cpp  BFs.cpp  Bellman-Ford.cpp  DFS  DFS.cpp  DJ  DJ.cpp  Dijsktra.cpp  Lee.cpp  OUT_BFs  input.txt
Grafuri/test2/: OUT  Prim.cpp  explicatie.txt
OOP/: notes.txt
OOP/Lab1/: exit  main.c
OOP/Lab1_tema/: a.out  main  main.c
OOP/Lab6-7/: APP  CMakeLists.txt  Exception.h  GUI.cpp  GUI.h  Hatz.csv  Produs.cpp  Produs.h  Repo.cpp  Repo.h  Service.cpp  Service.h  TEST  TEST-Produs.gcda  TEST-Produs.gcno  TEST-Repo.gcda  TEST-Repo.gcno  TEST-Service.gcda  TEST-Service.gcno  TEST-Test.gcda  TEST-Test.gcno  TEST-Valid.gcda  TEST-Valid.gcno  TEST-Wishlist.gcda  TEST-Wishlist.gcno  Test.cpp  UI.cpp  UI.h  Undo.cpp  Undo.h  Valid.cpp  Valid.h  WishGUI.cpp  WishGUI.h  Wishlist.cpp  Wishlist.h  cmd.txt  exp_test.csv  main.cpp  nume.csv  (+4 more)
OOP/Simul/: CMakeLists.txt  GUI.cpp  GUI.h  Produs.cpp  Produs.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Valid.cpp  Valid.h  main.cpp  save.txt  test.cpp  test.h
OOP/SubSim/: CMakeLists.txt  GUI.cpp  GUI.h  Repo.cpp  Repo.h  Rochie.cpp  Rochie.h  Service.cpp  Service.h  Valid.cpp  Valid.h  extra.txt  main.cpp  save.txt  save_test.txt  test.cpp  test.h
OperatingSystems/: linux.txt
SDA/: info.txt
(+400 files in other folders)
